# TorchSpatial

./: .gitignore  pyproject.toml
main/: SpatialRelationEncoder.py  __init__.py  utils.py
