[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "torchspatial"
version = "0.1.0"
description = "Location encoding framework for spatial representation learning"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.10",
    "numpy>=1.21",
    "scipy>=1.7",
]

[tool.setuptools]
packages = ["torchspatial"]

[tool.setuptools.package-dir]
torchspatial = "main"
